--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -28,10 +28,9 @@
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
     <div class="container-fluid">
 
-      <a class="navbar-brand" href="/listings"> <i class="fa-regular fa-compass"></i> </a>
-      <!-- <a class="navbar-brand" href="/listings"> 
-        <img src="/public/assets/logo.png" class="logo"> 
-      </a> -->
+      <a class="navbar-brand" href="/listings"> 
+        <img src="/public/assets/logo.png" height="50px" width="50px"> 
+      </a> 
 
       <button 
         class="navbar-toggler" 
