--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -29,7 +29,7 @@
     <div class="container-fluid">
 
       <a class="navbar-brand" href="/listings"> 
-        <img src="/public/assets/mainlogo.png" height="50px" width="50px"> 
+        <img src="https://i.imgur.com/g8m9cjQ.png" height="50px" width="50px"> 
       </a> 
 
       <button 
